--- a/photo_browser/package.json
+++ b/photo_browser/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://partanennn.github.io/futurice_pre-task",
   "name": "photo_browser",
   "version": "0.1.0",
   "private": true,
@@ -17,6 +18,8 @@
     "typescript": "^4.7.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -39,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
